@@ -1,3 +1,9 @@
+2002-04-18  Sam Steingold  <sds@gnu.org>
+
+	fixed bug [ 543072 ]: make-encoding :input-action on bad input
+	* stream.d (iconv_mblen, iconv_mbstowcs): treat EINVAL (incomplete
+	input) like EILEQ (conversion error) for delimited strings
+
 2002-04-17  Sam Steingold  <sds@gnu.org>
 
 	* stream.d (low_close_socket) [WIN32_NATIVE]: shutdown the socket
